--- a/docs/platform/components/invite-new-users.mdx
+++ b/docs/platform/components/invite-new-users.mdx
@@ -1,4 +1,4 @@
-To invite a new member, go to **Settings → Invite users**. You can add a role of user, admin, or support. The default is "user" in case you omit it.
+To invite a new member, go to **Admin → Invites**. You can add a role of user, admin, or support. The default is "user" in case you omit it.
 
 <p align="center">
   <img width="600" src="/img/docs/platform/invite-new-users.png" alt="Invite new users on the Memfault application" />
