--- a/docs/embedded/steps/logging-dependency.mdx
+++ b/docs/embedded/steps/logging-dependency.mdx
@@ -7,7 +7,7 @@ Based on your setup, choose one of the options below:
 <details>
   <summary>Platform does logging via Macros</summary>
 
-1. Add `-DMEMFAULT_PLATFORM_HAS_LOG_CONFIG=1` to targets compiler flags
+1. Add `#define MEMFAULT_PLATFORM_HAS_LOG_CONFIG 1` to `third_party/memfault/memfault_platform_config.h`
 2. Remap Memfault logging macros to platform logging macros by adding the following
 macros to the `memfault_platform_log_config.h` file created earlier.
 
