Use a separate base path for embed mode instead of ?embed (#15)
This allows us to know during SSR whether the query is from our embedded
iframe, since during SSR we don't have access to query params.

--- a/docs/android/android-getting-started-guide.mdx
+++ b/docs/android/android-getting-started-guide.mdx
@@ -194,9 +194,9 @@ generated. Once generated, it will be automatically uploaded to Memfault:
 ```
 
 More information on triggering a bug report can be found in
-[Triggering A Bug Report Programmatically](android-bort.md#triggering-a-bug-report-programmatically);
+[Triggering A Bug Report Programmatically](/docs/android/android-bort#triggering-a-bug-report-programmatically);
 more information on when bug reports are automatically captured can be found in
-[Bug Report Capture Period](android-bort#bug-report-capture-period).
+[Bug Report Capture Period](/docs/android/android-bort#bug-report-capture-period).
 
 Once the bug report has been generated, uploaded and processed successfully, you
 will be able to find it in Memfault by navigating to the `Fleet > Devices` view
