--- a/docs/embedded/steps/core-platform-dependencies.mdx
+++ b/docs/embedded/steps/core-platform-dependencies.mdx
@@ -10,21 +10,15 @@ You can copy the template below into your project and fill in accordingly.
 
 #include <stdbool.h>
 
-static uint8_t s_event_storage[1024];
-
-MEMFAULT_PUT_IN_SECTION(".noinit")
-static uint8_t s_reboot_tracking[MEMFAULT_REBOOT_TRACKING_REGION_SIZE];
-
-
 void memfault_platform_get_device_info(sMemfaultDeviceInfo *info) {
   // See https://mflt.io/version-nomenclature for more context
   *info = (sMemfaultDeviceInfo) {
      // An ID that uniquely identifies the device in your fleet
      // (i.e serial number, mac addr, chip id, etc)
-    .device_serial = "",
+    .device_serial = "DEMOSERIAL",
      // A name to represent the firmware running on the MCU.
      // (i.e "ble-fw", "main-fw", or a codename for your project)
-    .software_type = "",
+    .software_type = "app-fw",
      // The version of the "software_type" currently running.
      // "software_type" + "software_version" must uniquely represent
      // a single binary
@@ -32,19 +26,20 @@ void memfault_platform_get_device_info(sMemfaultDeviceInfo *info) {
      // The revision of hardware for the device. This value must remain
      // the same for a unique device.
      // (i.e evt, dvt, pvt, or rev1, rev2, etc)
-    .hardware_version = "",
+    .hardware_version = "dvt1",
   };
 }
 
 //! Last function called after a coredump is saved. Should perform
 //! any final cleanup and then reset the device
 void memfault_platform_reboot(void) {
-   // i.e NVIC_SystemReset();
+   // TODO: Perform any final system cleanup and issue a software reset
+   // (i.e NVIC_SystemReset())
    while (1) { } // unreachable
 }
 
 bool memfault_platform_time_get_current(sMemfaultCurrentTime *time) {
-  // If device does not track time, stub can be left as is
+  // TODO: If device does not track time, stub can be left as is
   //
   // If the device tracks real time, update 'unix_timestamp_secs' with seconds since epoch
   // _and_ change the return value to true. This will cause events logged by the SDK to be
@@ -66,10 +61,7 @@ int memfault_platform_boot(void) {
 
   memfault_build_info_dump();
 
-  sResetBootupInfo reset_info = { 0 };
-  memfault_reboot_reason_get(&reset_info);
-  memfault_reboot_tracking_boot(s_reboot_tracking, &reset_info);
-
+  static uint8_t s_event_storage[1024];
   const sMemfaultEventStorageImpl *evt_storage =
       memfault_events_storage_boot(s_event_storage, sizeof(s_event_storage));
   memfault_trace_event_boot(evt_storage);
