--- a/docs/embedded/steps/coredump-dependency.mdx
+++ b/docs/embedded/steps/coredump-dependency.mdx
@@ -18,15 +18,15 @@ static sMfltCoredumpRegion s_coredump_regions[1];
 
 //! Truncates the region if it's outside the bounds of RAM
 size_t memfault_platform_sanitize_address_range(void *start_addr, size_t desired_size) {
-  const uint32_t ram_start = YOUR_PLATFORM_SRAM_START;
-  const uint32_t ram_end = YOUR_PLATFORM_SRAM_END;
+  // TODO: Populate with actual boundaries of RAM for target MCU
+  const uint32_t ram_start = 0x00000000;
+  const uint32_t ram_end = 0xFFFFFFFF;
 
   if ((uint32_t)start_addr >= ram_start && (uint32_t)start_addr < ram_end) {
     return MEMFAULT_MIN(desired_size, ram_end - (uint32_t)start_addr);
   }
   return 0;
 }
-
 
 //! The RAM regions to collect in a coredump capture
 const sMfltCoredumpRegion *memfault_platform_coredump_get_regions(
@@ -142,4 +142,3 @@ void memfault_platform_coredump_storage_clear(void) {
 ```
 
 </details>
-
