--- a/blog/2020-04-20.md
+++ b/blog/2020-04-20.md
@@ -4,7 +4,9 @@ title: April Updates
 
 Memfault Changelog for April
 
-> NOTE: The changelog is now separated into 3 sections: Embedded, Android, and General.
+:::note
+The changelog is now separated into 3 sections: Embedded, Android, and General.
+:::
 
 ## Embedded
 - Add support for showing logs in the Issue detail view if the device is compiled and uses the Memfault Logging SDK.
