--- a/blog/2020-06-30.md
+++ b/blog/2020-06-30.md
@@ -13,7 +13,9 @@ show this information in the main dashboard.
   <img width="600" src="/img/blog/2020-06-30-reboot-reason-tracking.png" alt="reboot-reason-tracking" />
 </p>
 
-> This functionality is coming soon for Android.
+:::note
+This functionality is coming soon for Android.
+:::
 
 <!-- truncate -->
 
