--- a/docs/embedded/steps/upload-symbol-file.mdx
+++ b/docs/embedded/steps/upload-symbol-file.mdx
@@ -8,5 +8,7 @@ to the "Issues" page. Follow the link pointed to below and upload a symbol file.
 
 After this step you will see the trace in the list of issues!
 
-> :bulb: You can programatically upload symbol files with the
-> [Memfault CLI tool](/docs/ci/install-memfault-cli).
+:::tip
+You can programatically upload symbol files with the
+[Memfault CLI tool](/docs/ci/install-memfault-cli).
+:::
