--- a/docs/embedded/steps/rtos-ports.mdx
+++ b/docs/embedded/steps/rtos-ports.mdx
@@ -22,12 +22,14 @@ Expand the tab for the one applies to your system below in order to pick them up
 #include "memfault/ports/freertos_trace.h"
 ```
 
-> :bulb: While in the file, we recommend using the following settings to catch issues:
-  ```
-  #define configCHECK_FOR_STACK_OVERFLOW 2
-  void vAssertCalled(const char *file, int line);
-  #define configASSERT(x) if ((x) == 0) vAssertCalled( __FILE__, __LINE__ )
-  ```
+:::tip
+While in the file, we recommend using the following settings to catch issues:
+```
+#define configCHECK_FOR_STACK_OVERFLOW 2
+void vAssertCalled(const char *file, int line);
+#define configASSERT(x) if ((x) == 0) vAssertCalled( __FILE__, __LINE__ )
+```
+:::
 
 #### Initialize FreeRTOS Port on Boot
 
