--- a/docs/android/android-getting-started-guide.mdx
+++ b/docs/android/android-getting-started-guide.mdx
@@ -77,7 +77,7 @@ include vendor/memfault/bort/BoardConfig.mk
 
 ### Configure the Bort & UsageReporter apps
 
-**You must set your project API key in the Bort app**. This is set in
+**You must set your Project Key in the Bort app**. This is set in
 `MemfaultPackages/bort.properties`; the app will not compile without this
 property.
 
