--- a/docs/android/android-releases-guide.mdx
+++ b/docs/android/android-releases-guide.mdx
@@ -112,13 +112,13 @@ organization and project in the Memfault UI:
 1. Make sure that you've selected the right project on the top-left
 2. Click on "Settings" and then "General Settings"
 
-### Project API Key
+### Project Key
 
-This is the API token that is used when pushing data between a device and the
+This is a token that is used when pushing data between a device and the
 Memfault cloud. We will be using this to query for OTA Payloads in this
 tutorial. To locate this token you will also want to navigate to the "Settings"
--> "General" page in the Memfault UI and copy/paste the token in the "Project
-API Key" section.
+-> "General" page in the Memfault UI and copy/paste the token in the "Project Key"
+section.
 
 ## Managing Your First Release
 
@@ -236,7 +236,7 @@ $ export MEMFAULT_LATEST_API_ROUTE=https://device.memfault.com/api/v0/releases/l
 $ export SOFTWARE_VERSION=acme_inc%2Fsmartfridge%2Fsmartfridge%2Fsubzero%3A10%2FQQ1.factory%2F001%3Auser%2Frelease-keys
 $ curl -i -X GET \
   "${MEMFAULT_LATEST_API_ROUTE}?device_serial=DEMOSERIAL&hardware_version=subzero&software_type=android-build&current_version=${SOFTWARE_VERSION}" \
-  --header "Memfault-Project-Key: ${YOUR_PROJECT_API_KEY}"
+  --header "Memfault-Project-Key: ${YOUR_PROJECT_KEY}"
 
 HTTP/1.1 200 OK
 
@@ -268,7 +268,7 @@ as the value for `current_version`:
 $ export SOFTWARE_VERSION=acme_inc%2Fsmartfridge%2Fsmartfridge%2Fsubzero%3A10%2FQQ2A.200405.005%2F04302340%3Auser%2Frelease-keys
 $ curl -i -X GET  \
   "${MEMFAULT_LATEST_URL_API_ROUTE}?device_serial=DEMOSERIAL&hardware_version=mp&software_type=stm32-fw&current_version=0.0.1" \
-  --header "Memfault-Project-Key: ${YOUR_PROJECT_API_KEY}"
+  --header "Memfault-Project-Key: ${YOUR_PROJECT_KEY}"
 
 HTTP/1.1 204 NO CONTENT
 memfault-reason: latest
