--- a/docs/embedded/esp32-guide.mdx
+++ b/docs/embedded/esp32-guide.mdx
@@ -125,7 +125,7 @@ void memfault_platform_get_device_info(sMemfaultDeviceInfo *info) {
 
 An API key will need to be included in order to communicate with Memfault's web
 services. Go to https://app.memfault.com/, navigate to the project you want to
-use and select 'Settings'. Copy the 'Project API Key' and replace
+use and select 'Settings'. Copy the 'Project Key' and replace
 `<YOUR API KEY HERE>` below and then add the following to your code:
 
 ```c
