--- a/docs/embedded/test-patterns-for-chunks-endpoint.mdx
+++ b/docs/embedded/test-patterns-for-chunks-endpoint.mdx
@@ -32,9 +32,9 @@ to facilitate posting chunks to Memfault from an iOS app.
 
 #### Project Key
 
-A Project API key will be needed in order to communicate with Memfault's web
+A key will be needed in order to communicate with Memfault's web
 services. Go to [https://app.memfault.com/](https://app.memfault.com/), navigate
-to the project you want to use and select 'Settings'→'General'. The 'Project API
+to the project you want to use and select 'Settings'→'General'. The 'Project
 Key' listed is what you will want to use.
 
 Note you will have to replace `<YOUR_PROJECT_KEY>` with the one you grabbed in
