--- a/docs/platform/api-keys.mdx
+++ b/docs/platform/api-keys.mdx
@@ -8,7 +8,7 @@ Memfault supports API keys as an authentication method. There are three types of
 
 - User API keys
 - Organization API keys
-- Project API keys
+- Project keys
 
 ## Types of API Key
 
@@ -22,6 +22,6 @@ Organization API keys can be managed by organization admins in the application u
 
 To generate a User API key, please read [the Auth section of our API documentation](https://api-docs.memfault.com/#authentication). Since users may belong to multiple organizations, User API keys give them access to all organizations of which they're a member.
 
-### Project API Keys
+### Project Keys
 
-Project API keys can be generated on demand. [Please contact us](mailto:hello@memfault.com) if you'd like to have one.
+Project keys can be generated on demand. [Please contact us](mailto:hello@memfault.com) if you'd like to have one.
