--- a/docs/platform/memfault-terminology.mdx
+++ b/docs/platform/memfault-terminology.mdx
@@ -29,7 +29,7 @@ sidebar_label: Memfault Terminology
 | Organization             | Entity which contains many projects and users. Typically one organization per company.                                                                                                                                                                                                                                                                                                                                                 |
 | Owner Ref                | A user-defined unique identifier which can refer to the "owner" of a Device. Since Memfault wants all your customers data to stay in your own systems, you can use this field to associate a device to a "user" without giving us the user data.                                                                                                                                                                                       |
 | Project                  | A logical warehouse of all the Memfault data related to a particular class of device. Contains Releases, Cohorts, Issues, etc.                                                                                                                                                                                                                                                                                                         |
-| Project API Key          | The key that is included in the Header of the HTTP request when sending (or retrieving) data from Memfault servers. This is only allowed/required on certain endpoints. It does not grant access to all API endpoints. For general Auth, refer to the Auth section of the Memfault API Documentation                                                                                                                                   |
+| Project Key              | The key that is included in the Header of the HTTP request when sending (or retrieving) data from Memfault servers. This is only allowed/required on certain endpoints. It does not grant access to all API endpoints. For general Auth, refer to the Auth section of the Memfault API Documentation                                                                                                                                   |
 | Release                  | A logical grouping of Artifacts that are usually built from the same revision.                                                                                                                                                                                                                                                                                                                                                         |
 | Revision                 | The VCS version that is associated with the Release. If using Git, this would be the SHA-1 of the commit.                                                                                                                                                                                                                                                                                                                              |
 | Rollout - Normal         | Make a Release available to all Devices in the Cohort immediately                                                                                                                                                                                                                                                                                                                                                                      |
