--- a/docs/platform/sso.mdx
+++ b/docs/platform/sso.mdx
@@ -83,6 +83,6 @@ automatically.
 
 Find out more about API Keys [here](api-keys).
 
-Organization-scoped and Project API Keys will continue to work as usual if your organization has SSO enabled.
+Organization-scoped and Project Keys will continue to work as usual if your organization has SSO enabled.
 
 However, [User API keys](api-keys#user-api-keys) are going to be rejected for SSO-enabled organizations if you haven't used that organization's SSO provider in more than two weeks. Note that the key will continue to work for a User's own resources or when accessing other organizations they have access to. To reenable access to an SSO-enabled organization's resources with your User API key, log in to that organization [using the application](#logging-into-the-app), with the SSO provider of the organization.
