--- a/docs/embedded/arm-gcc-guide.mdx
+++ b/docs/embedded/arm-gcc-guide.mdx
@@ -227,12 +227,12 @@ int main(void) {
 At this point data collection for trace events is fully implemented! Now we just
 need to push the data to the Memfault cloud ...
 
-### Create a Project and Get Project API Key
+### Create a Project and Get Project Key
 
 Go to https://app.memfault.com/ and from the "Select A Project" dropdown, click
 on "Create Project" to setup your first project such as "smart-sink-dev".
 
-Then navigate to "Settings" -> "General", where you can find the "Project API
+Then navigate to "Settings" -> "General", where you can find the "Project
 Key" which will be used to communicate with Memfault's web services.
 
 ### Publish data to the Memfault cloud
