--- a/docs/embedded/nrf-connect-sdk-guide.mdx
+++ b/docs/embedded/nrf-connect-sdk-guide.mdx
@@ -111,12 +111,12 @@ $ cd ${ZEPHYR_BASE}
 $ git apply ${MEMFAULT_FIRMWARE_SDK}/ports/zephyr/v2.x/coredump-support.patch
 ```
 
-### Create a Project and Get Project API Key
+### Create a Project and Get Project Key
 
 Go to https://app.memfault.com/ and from the "Select A Project" dropdown, click
 on "Create Project" to setup your first project such as "smart-sink-dev".
 
-Then navigate to "Settings" -> "General", where you can find the "Project API
+Then navigate to "Settings" -> "General", where you can find the "Project
 Key" which will be used to communicate with Memfault's web services.
 
 ### Implement Platform Dependencies
@@ -141,13 +141,13 @@ void memfault_platform_get_device_info(sMemfaultDeviceInfo *info) {
 
 ### Implement NRF9160 Platform Dependencies
 
-Add the Project API Key and install the Root CA's used by Memfault:
+Add the Project Key and install the Root CA's used by Memfault:
 
 ```c
 #include "memfault/http/http_client.h"
 
 sMfltHttpClientConfig g_mflt_http_client_config = {
-  .api_key = "<PROJECT_API_KEY>",
+  .api_key = "<YOUR_PROJECT_KEY>",
 };
 ```
 
@@ -341,7 +341,7 @@ The CLI output can then be saved to a file and the "chunk" data can be posted to
 the Memfault Cloud using the [Memfault CLI tool](/docs/ci/install-memfault-cli):
 
 ```bash
-$ memfault --project-key ${YOUR_PROJECT_API_KEY} post-chunk --encoding sdk_data_export cli-output.txt
+$ memfault --project-key ${YOUR_PROJECT_KEY} post-chunk --encoding sdk_data_export cli-output.txt
 Found 2 Chunks. Sending Data ...
 Success
 ```
